# grpc-ex-tonic

./: Cargo.toml  README.md  build.rs
src/: client.rs  error.rs  lib.rs  server.rs  service.proto  service.rs
